add residual connection

--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -82,37 +82,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from model import LayerNormalization\n",
+    "\n",
+    "ln = LayerNormalization()\n",
+    "t = torch.tensor([[1.0, 3.0], [2.0, 4.0]], dtype=torch.float32)\n",
+    "ret = ln(t)\n",
+    "torch.testing.assert_close(ret, \n",
+    "    torch.tensor([[-0.7071, 0.7071], [-0.7071, 0.7071]]), \n",
+    "    rtol=0.001, atol=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from model import FeedForwardLayer\n",
+    "\n",
+    "d_model= 2\n",
+    "d_ff=4\n",
+    "ff = FeedForwardLayer(d_model, d_ff, 0.0)\n",
+    "t = torch.tensor([[1.0, 3.0], [2.0, 4.0]], dtype=torch.float32)\n",
+    "ret = ff(t)\n",
+    "assert ret.shape == t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 1.,  3.],\n",
-      "        [-2.,  4.]])\n",
-      "tensor([[-0.7071,  0.7071],\n",
-      "        [-0.7071,  0.7071]], grad_fn=<AddBackward0>)\n",
-      "Parameter containing:\n",
-      "tensor([1.], requires_grad=True)\n",
-      "Parameter containing:\n",
-      "tensor([0.], requires_grad=True)\n"
+      "tensor([[[-2.2721,  0.8713, -0.5806, -3.0091,  1.2611,  2.9500],\n",
+      "         [-2.3816,  1.1305, -0.7528, -2.9254,  1.1528,  2.8034]]],\n",
+      "       grad_fn=<ViewBackward0>)\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
-    "from torch.testing import make_tensor\n",
+    "from model import MultiHeadAttentionBlock\n",
     "\n",
-    "from model import LayerNormalization\n",
-    "\n",
-    "ln = LayerNormalization()\n",
-    "t = torch.tensor([[1.0, 3.0], [2.0, 4.0]], dtype=torch.float32)\n",
-    "ret = ln(t)\n",
-    "print(t)\n",
+    "d_model = 6\n",
+    "n_heads = 2\n",
+    "mh = MultiHeadAttentionBlock(d_model, n_heads, 0.0)\n",
+    "# (batch:1, seq:2, d_model:6)\n",
+    "t = torch.tensor([[1.0, 3.0, 5.0, 7.0, 9.0, 11.0], [2.0, 4.0, 6.0, 8.0, 10.0, 12.0]], dtype=torch.float32)\n",
+    "t = t.unsqueeze(0)\n",
+    "mask = torch.tensor([[1, 0], [1,1]], dtype=torch.float32)\n",
+    "ret = mh(t, mask)\n",
     "print(ret)\n",
-    "print(ln.alpha)\n",
-    "print(ln.beta)"
+    "assert ret.shape == t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4823, 1.7688],\n",
+      "        [1.4823, 2.7688]], grad_fn=<AddBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "from model import ResidualConnection\n",
+    "\n",
+    "sublayer = nn.Linear(2, 2)\n",
+    "rc = ResidualConnection(0.0)\n",
+    "# (batch:1, seq:2, d_model:2)\n",
+    "t = torch.tensor([[1.0, 3.0,], [2.0, 4.0]], dtype=torch.float32)\n",
+    "ret = rc(t, sublayer)\n",
+    "print(ret)\n",
+    "assert ret.shape == t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4823, 1.7688],\n",
+      "        [1.4823, 2.7688]], grad_fn=<AddBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "from model import EncoderBlock\n",
+    "\n",
+    "rc = ResidualConnection(0.0)\n",
+    "# (batch:1, seq:2, d_model:2)\n",
+    "t = torch.tensor([[1.0, 3.0,], [2.0, 4.0]], dtype=torch.float32)\n",
+    "ret = rc(t, sublayer)\n",
+    "print(ret)\n",
+    "assert ret.shape == t.shape"
    ]
   }
  ],
