--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -140,7 +140,7 @@
     "t = torch.tensor([[1.0, 3.0, 5.0, 7.0, 9.0, 11.0], [2.0, 4.0, 6.0, 8.0, 10.0, 12.0]], dtype=torch.float32)\n",
     "t = t.unsqueeze(0)\n",
     "mask = torch.tensor([[1, 0], [1,1]], dtype=torch.float32)\n",
-    "ret = mh(t, mask)\n",
+    "ret = mh(t, t, t, mask)\n",
     "print(ret)\n",
     "assert ret.shape == t.shape"
    ]
@@ -176,15 +176,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.4823, 1.7688],\n",
-      "        [1.4823, 2.7688]], grad_fn=<AddBackward0>)\n"
+      "tensor([[[1.8756, 3.5665],\n",
+      "         [2.8756, 4.5665]]], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
@@ -192,14 +192,24 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "from model import EncoderBlock\n",
+    "from model import EncoderBlock, MultiHeadAttentionBlock, FeedForwardLayer\n",
     "\n",
-    "rc = ResidualConnection(0.0)\n",
+    "d_model = 2\n",
+    "n_heads = 2\n",
+    "d_ff = 4\n",
+    "dropout = 0.0\n",
+    "mh = MultiHeadAttentionBlock(d_model, n_heads, dropout)\n",
+    "ff = FeedForwardLayer(d_model, d_ff, dropout)\n",
+    "\n",
+    "eb = EncoderBlock(mh, ff, dropout)\n",
     "# (batch:1, seq:2, d_model:2)\n",
     "t = torch.tensor([[1.0, 3.0,], [2.0, 4.0]], dtype=torch.float32)\n",
-    "ret = rc(t, sublayer)\n",
+    "t = t.unsqueeze(0)\n",
+    "mask = torch.tensor([[1, 0], [1,1]], dtype=torch.float32)\n",
+    "\n",
+    "ret = eb(t, mask)\n",
     "print(ret)\n",
-    "assert ret.shape == t.shape"
+    "assert ret.shape == t.shape, f\"ret.shape: {ret.shape} vs t.shape: {t.shape}\""
    ]
   }
  ],
