--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -2,17 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,14 +25,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qw/39xmrqvj4c35fzml_g44x6lc0000gq/T/ipykernel_78671/3769477546.py:9: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
+      "/var/folders/qw/39xmrqvj4c35fzml_g44x6lc0000gq/T/ipykernel_5313/3512890504.py:11: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
       "  has_mps = getattr(torch,'has_mps',False)\n",
-      "/var/folders/qw/39xmrqvj4c35fzml_g44x6lc0000gq/T/ipykernel_78671/3769477546.py:10: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
+      "/var/folders/qw/39xmrqvj4c35fzml_g44x6lc0000gq/T/ipykernel_5313/3512890504.py:12: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
       "  device = \"mps\" if getattr(torch,'has_mps',False) \\\n"
      ]
     }
    ],
    "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
     "# What version of Python do you have?\n",
     "import sys\n",
     "import platform\n",
@@ -152,15 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[-0.4387,  1.0943,  1.6182, -0.1563,  0.9320, -0.1748],\n",
-      "         [-0.4572,  1.1914,  1.6225, -0.1268,  0.9637, -0.2005]]],\n",
+      "tensor([[[ 1.1179,  2.8833, -0.0470,  1.9013,  1.1817,  0.8868],\n",
+      "         [ 1.0451,  2.7174, -0.1954,  2.2047,  1.3707,  0.7811]]],\n",
       "       device='mps:0', grad_fn=<LinearBackward0>)\n"
      ]
     }
