--- a/Beam_Search.ipynb
+++ b/Beam_Search.ipynb
@@ -2,19 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from config import get_config, get_weights_file_path\n",
-    "from train import get_model, get_ds, run_validation, causal_mask"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -211,7 +198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "transformer",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -225,10 +212,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.18"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
