--- a/attention_visual.ipynb
+++ b/attention_visual.ipynb
@@ -184,9 +184,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "transformer",
+   "display_name": "Python 3.9 (torch)",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch"
   },
   "language_info": {
    "codemirror_mode": {
@@ -198,10 +198,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.18"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
